Angular: Fix buttons being invisible

--- a/TDS_Client/Window/angular/projects/main/src/app/components/carousel/carousel.component.scss
+++ b/TDS_Client/Window/angular/projects/main/src/app/components/carousel/carousel.component.scss
@@ -16,7 +16,6 @@
         transition: transform 1s;
 
         > button {
-            display: 'none';
             position: absolute;
             width: 100%;
             height: 100%;
